# iMirror

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: MSCA-iMirror投屏集成计划.md  Windows投屏实施计划.md  Windows投屏路线评估.md  protocol.md  协议速查.md  已知问题与归因.md  真机联调手册.md
imirror/: __init__.py  cli.py  macos_native.py  session.py  windows_airplay.py  windows_tools.py
imirror/consumers/: h264_writer.py  wav_writer.py
imirror/coremedia/: asbd.py  cmclock.py  cmsamplebuffer.py  cmtime.py  formatdescriptor.py  nsnumber.py  qtdict.py
imirror/gui/: viewer.py
imirror/protocol/: asyn.py  constants.py  framing.py  ping.py  sync.py
imirror/usb/: activation.py  adapter.py  discovery.py
scripts/: fetch-qvh-windows-tools.ps1  setup-macos.sh  setup-windows.bat
tests/: test_activation.py  test_adapter.py  test_cli.py  test_dict.py  test_discovery.py  test_formatdescriptor.py  test_framing.py  test_packets.py  test_windows_airplay.py  test_windows_tools.py
