[project]
name = "imirror"
version = "0.2.0"
description = "iOS 投屏采集实验项目 - AirPlay 与 QuickTime raw USB 后端"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyusb>=1.2",
]

[project.optional-dependencies]
gui = [
    "av>=12.0",
    "opencv-python>=4.9",
]
windows = [
    "libusb-package>=1.0",   # 自带 libusb 运行库, Windows 免手动放 dll
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
imirror = "imirror.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["imirror*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
